Update and rename Testing.Rmd to WTKLAB/Initial programs/Testing.Rmd

--- a/WTKLAB/Initial programs/Testing.Rmd
+++ b/WTKLAB/Initial programs/Testing.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Testing"
-author: "Alecia"
+author: "Alecia" #my supervisor began this and helped me through as my first trial run
 date: "`r Sys.Date()`"
 output: html_document
 ---
